# LP

./: .gitignore  pyproject.toml
baseline/: ocr_engine_baseline.py
baseline/finetune_paddleocr/: PP-OCRv5_mobile_rec.yml
baseline/finetune_paddleocr/train_data/: train_list.txt  val_list.txt  vn_plate_dict.txt
data/processed/: processed_data.csv  processed_data2.csv
data/splits/: all_splits.csv  test.csv  train.csv  val.csv
data/synthetic/: final_data.csv  synthetic_data.csv
preprocessing/: check_raw_data.py  create_realdataset.py  create_synthetic_data.py  split_data.py
result/: final_baseline_summary_20260528_122634.json  final_baseline_summary_20260529_155632.json  realworld_results_20260528_122634.json  realworld_results_20260529_155632.json  synthetic_results_20260528_122419.json  synthetic_results_20260529_155432.json
