[project]
name = "dca-lp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "albumentations>=2.0.8",
    "matplotlib>=3.10.3",
    "opencv-python>=4.11.0.86",
    "paddleocr[all]>=3.5.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.6.1",
    "ultralytics>=8.4.53",
]
